# QTicketBai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.sh  ticketbai-qt.pc.in
example/: CMakeLists.txt  README.md  contact.cpp  contact.h  contactcontroller.cpp  contactcontroller.h  invoice.cpp  invoice.h  invoicecontroller.cpp  invoicecontroller.h  invoiceline.cpp  invoiceline.h  main.cpp  main.qml  product.cpp  product.h  productcontroller.cpp  productcontroller.h  qml.qrc  settings.cpp  settings.h
example/ui/: Contact.qml  ContactIndex.qml  Invoice.qml  InvoiceIndex.qml  InvoiceLine.qml  ModelIndex.qml  Product.qml  ProductIndex.qml  TicketBai.qml
examples/: invoice-upload.xml
scripts/: alias_from_certificate.sh  install-autofirma.sh  qtest_runner.sh
tests/: CMakeLists.txt  helper_companydata.cpp  helper_invoice.h  helper_tbai_test.cpp  helper_tbai_test.h  helper_xmlsec_test.cpp  helper_xmlsec_test.h  tst_lroeclient.cpp  tst_lroeclient.h  tst_lroesubmitprocess.cpp  tst_lroesubmitprocess.h  tst_tbaicertificate.cpp  tst_tbaicertificate.h  tst_tbaiinvoice.cpp  tst_tbaiinvoice.h  tst_tbaisignprocess.cpp  tst_tbaisignprocess.h
ticketbai-qt/: abstracttbaidocument.cpp  abstracttbaidocument.h  canceldocument.cpp  canceldocument.h  companydata.h  context.cpp  context.h  invoicecomponent.cpp  invoicecomponent.h  invoiceinterface.h  invoiceuploaddocument.cpp  invoiceuploaddocument.h  lroeclient.cpp  lroeclient.h  lroedocument.cpp  lroedocument.h  lroesubmitprocess.cpp  lroesubmitprocess.h  lroeuploadresponse.cpp  lroeuploadresponse.h  qcompressor.cpp  qcompressor.h  qticketbai.cpp  qticketbai.h  querydocument.h  tbaicertificate.cpp  tbaicertificate.h  tbaicontact.cpp  tbaicontact.h  tbaicontactdefines.cpp  tbaicontactdefines.h  tbaidocument.cpp  tbaidocument.h  tbaiinvoice.cpp  tbaiinvoice.h  tbaiinvoicedefines.cpp  tbaiinvoicedefines.h  tbaiinvoiceinterface.h  tbaisignprocess.cpp  tbaisignprocess.h  (+8 more)
